# Lustra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Application.hpp  Asset.hpp  AssetHandle.hpp  AssetManager.hpp  Camera.hpp  Components.hpp  ComponentsUI.hpp  CubeApp.hpp  DeferredRenderer.hpp  Entity.hpp  Event.hpp  EventManager.hpp  ImGuiManager.hpp  Keyboard.hpp  Matrices.hpp  Mesh.hpp  Mouse.hpp  Multithreading.hpp  PostProcessing.hpp  Renderer.hpp  RendererBase.hpp  Scene.hpp  SceneTestApp.hpp  TextureManager.hpp  Timer.hpp  Utils.hpp  Window.hpp
include/Assets/: AnimationAsset.hpp  Asset.hpp  AssetManager.hpp  EnvironmentAsset.hpp  MaterialAsset.hpp  ModelAsset.hpp  SceneAsset.hpp  ScriptAsset.hpp  ShaderAsset.hpp  SoundAsset.hpp  TextureAsset.hpp
include/Assets/Loaders/: AssetLoader.hpp  MaterialLoader.hpp  ModelLoader.hpp  SceneLoader.hpp  ScriptLoader.hpp  ShaderLoader.hpp  SoundLoader.hpp  TextureLoader.hpp
include/Audio/: AudioManager.hpp  Listener.hpp  Sound.hpp
include/Components/: ComponentBase.hpp  Components.hpp  CoreComponents.hpp  PostProcessingComponents.hpp  Serialize.hpp  SkyComponents.hpp
include/Core/: Animation.hpp  AnimationManager.hpp  Application.hpp  Config.hpp  Multithreading.hpp  Random.hpp  Singleton.hpp  Timer.hpp  Utils.hpp
include/Editor/: Editor.hpp  ProjectManager.hpp
include/Events/: Event.hpp  EventListener.hpp  EventManager.hpp
include/Graphics/: Camera.hpp  DeferredRenderer.hpp  Matrices.hpp  Mesh.hpp  PBRManager.hpp  PostProcessing.hpp  Renderer.hpp  RendererBase.hpp  Window.hpp
include/ImGui/: ComponentsUI.hpp  ImGuiManager.hpp
include/Input/: InputManager.hpp  Keyboard.hpp  Mouse.hpp
include/Launcher/: Launcher.hpp
include/Physics/: BroadPhaseLayer.hpp  CollisionListener.hpp  JoltInclude.hpp  LayerFilters.hpp  Layers.hpp  PhysicsManager.hpp
include/Scene/: Components.hpp  Entity.hpp  Scene.hpp
include/Scripting/: AngelscriptUtils.hpp  ScriptManager.hpp
include/TestApps/: CubeApp.hpp  SceneTestApp.hpp
resources/config/: config.json
resources/layout/: editor_layout.ini
resources/materials/: ak47Metal  ak47Metal.mat  ak47Wood  ak47Wood.mat  default  logoMat.mat  ptitsa.mat
resources/models/: sphere.fbx  suzanne.fbx
resources/scenes/: main.json  main.scn  scene.json  scene1.json  scene2.json  shadows.scn
resources/scripts/: camera.as  sky.as  spin.as  test.as
resources/shaders/: BRDF.frag  HDRIConvert.frag  blur.frag  boxBlur.frag  deferred.frag  depth.vert  lightingPass.frag  prefilter.frag  proceduralSky.frag  test.frag  threshold.frag  tonemap.frag  vertex.vert
shaders/: ACES.frag  BRDF.frag  GTAO.frag  HDRISky.frag  SSR.frag  blur.frag  combinePost.frag  deferred.frag  fragment.frag  irradiance.frag  lightingPass.frag  post.frag  prefilter.frag  proceduralSky.frag  screenRect.vert  skybox.vert  tonemap.frag  vertex.vert
src/: Application.cpp  AssetManager.cpp  Camera.cpp  Components.cpp  CubeApp.cpp  DeferredRenderer.cpp  Entity.cpp  EventManager.cpp  ImGuiManager.cpp  Keyboard.cpp  Matrices.cpp  Mesh.cpp  Mouse.cpp  Multithreading.cpp  PostProcessing.cpp  Renderer.cpp  RendererBase.cpp  Scene.cpp  SceneTestApp.cpp  TextureManager.cpp  Timer.cpp  Window.cpp  imgui.ini
src/Assets/Loaders/: MaterialLoader.cpp  ModelLoader.cpp  SceneLoader.cpp  ScriptLoader.cpp  ShaderLoader.cpp  SoundLoader.cpp  TextureLoader.cpp
src/Audio/: AudioManager.cpp  Listener.cpp  Sound.cpp
src/Components/: BloomComponent.cpp  CoreComponents.cpp  GTAOComponent.cpp  SSRComponent.cpp  SkyComponents.cpp  TonemapComponent.cpp
src/Core/: AnimationManager.cpp  Application.cpp  Multithreading.cpp  Timer.cpp
src/Editor/: Editor.cpp  EditorCore.cpp  EditorImGui.cpp  main.cpp
src/Editor/GUI/: EditorAssetBrowser.cpp  EditorImGui.cpp
src/Editor/ProjectManager/: ProjectManager.cpp
src/Editor/Systems/: EditorCore.cpp  EditorResources.cpp
src/Events/: EventManager.cpp
src/Graphics/: Camera.cpp  DeferredRenderer.cpp  Matrices.cpp  Mesh.cpp  PBRManager.cpp  PostProcessing.cpp  Renderer.cpp  RendererBase.cpp  Window.cpp
src/ImGui/: ImGuiManager.cpp
src/Input/: InputManager.cpp  Keyboard.cpp  Mouse.cpp
src/Launcher/: Launcher.cpp  main.cpp
src/Physics/: PhysicsManager.cpp
src/Scene/: Components.cpp  Entity.cpp  Scene.cpp
src/Scripting/: ScriptManager.cpp
src/TestApps/: CubeApp.cpp  SceneTestApp.cpp
